syntax = "proto3";

import "google/protobuf/timestamp.proto";

package product;

service ProductService {
  rpc FindOne (FindProductByIdDto) returns (Product) {}
}

message FindProductByIdDto {
  string id = 1;
}

message Product {
  string id = 1;
  string name = 2;
  optional string description = 3;
  float price = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp createdAt = 6;
  optional google.protobuf.Timestamp deletedAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}